# embeddedRust

./: Cargo.toml  memory.x  notes.md  openocd.cfg  openocd.gdb
.cargo/: config
src/: main.rs
