[package]
authors = ["Fx137 <flufeu@gmail.com>"]
edition = "2018"
name = "embedded_rust"
version = "0.0.1"

[dependencies]
cortex-m = "0.6.2"
cortex-m-rt = "0.6.12"
cortex-m-semihosting = "0.3.5"
panic-halt = "0.2.0"

[[bin]]
name = "embedded_rust"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations